mobile overflow fixed; need minor style changes

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
-  overflow-x: hidden;
+  width: 100vw;
+  overflow: hidden;
   font-size: 1.2rem;
   font-family: 'Roboto', sans-serif;
 }
